# affine-types

./: AffineTypes.cppm  CMakeLists.txt  ConstevalNumber.cppm  README.md  example.cpp
